deploy/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: my-ingress-middleware
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /point
      - /store
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-my-ingress-middleware@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /point
        pathType: Prefix
        backend:
          service:
            name: point-service-svc
            port:
              number: 8001
      - path: /store 
        pathType: Prefix
        backend:
          service:
            name: store-service
            port:
              number: 8000
